cc_library(
    name = "libbencode",
    srcs = [],
    hdrs = ["libbencode.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "assertm",
    srcs = [],
    hdrs = ["assertm.h"],
    visibility = ["//visibility:private"],
)

cc_test(
    name = "test_decode_integer",
    srcs = ["test/test_decode_integer.cc"],
    deps = [":assertm", ":libbencode"],
)

cc_test(
    name = "test_decode_string",
    srcs = ["test/test_decode_string.cc"],
    deps = [":assertm", ":libbencode"],
)

cc_test(
    name = "test_decode_list",
    srcs = ["test/test_decode_list.cc"],
    deps = [":assertm", ":libbencode"],
)

cc_test(
    name = "test_decode_dictionary",
    srcs = ["test/test_decode_dictionary.cc"],
    deps = [":assertm", ":libbencode"],
)
